tests/tests/roundtrip/invalid/semantic/typecheck/int_in_bool_list/01/via-conjure.generated-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/typecheck/int_in_bool_list/01/input.essence:3:14:
  |
3 | such that or([x, y])
  |              ^^^^^^
Type error:
	Expected: "Collection of boolean"
	Got: matrix indexed by [int] of int

tests/roundtrip/invalid/semantic/typecheck/int_in_bool_list/01/input.essence:3:18:
  |
3 | such that or([x, y])
  |                  ^
Type error:
	Expected: int
	Got: bool

